# asyncpygame

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg  todo.md
.github/workflows/: python-package.yml
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree  reference.doctree
docs/_sources/: index.rst.txt  reference.rst.txt
examples/: 01_event_handling.py  02_coundown_on_cui.py  02_countdown_on_cui.py  03_coundown_on_gui.py  03_countdown_on_gui.py  04_coundown_in_a_more_practical_way.py  04_countdown_in_a_more_practical_way.py  05_coundown_in_an_even_more_practical_way.py  05_countdown_in_an_even_more_practical_way.py  06_full_blown_app_structure.py  _uix_anchor_layout.py  _uix_inapp_mouse_cursor.py  _uix_progress_spinner.py  _uix_ripple_button.py  _uix_touch_indicator.py  asking_question.py  bouncing_balls.py  coundown.py  fade_transition.py  loop_animation (skippable).py  loop_animation.py  move_on_after.py  network_io.py  network_io_with_animation.py  network_io_with_loading_animation.py  overlapping_buttons.py  painter.py  progress_spinner.py  ripple_button.py  scene_transition_showcase.py  skippable_animation.py  touch_indicator.py  whack_a_human.py
examples/_uix/: README.txt  __init__.py  anchor_layout.py  inapp_mouse_cursor.py  modal_dialog.py  progress_spinner.py  ripple_button.py  touch_indicator.py
examples/_utils/: convert_sound.py
investigation/: comparision_between_wait_freq_and_wait.py
sphinx/: conf.py  index.rst  reference.rst
src/asyncpygame/: __init__.py  _api_facade.py  _common_params.py  _drawing_system.py  _priority_dispatcher.py  _priority_executor.py  _runner.py  _sdl_event.py  _sdl_event_dispatcher.py  _sdlevent.py  _sleep.py  _thread.py  _timer.py  _utils.py  constants.py  priority_drawer.py  scene_switcher.py
src/asyncpygame/_api_impl/: _all.py  animation.py  priority_dispatcher.py  priority_drawing.py  sdl_event.py  threads.py  timer.py
tests/: test_block_input_events.py  test_block_inputs.py  test_drawing_system.py  test_priority_dispatcher.py  test_priority_drawer.py  test_priority_drawing.py  test_priority_executor.py  test_sdl_event.py  test_sdl_event_dispatcher.py  test_sdlevent.py  test_sleep.py  test_the_python_language.py  test_timer.py
tests/_api_impl/: test_priority_dispatcher.py  test_priority_drawing.py  test_run_in_executor.py  test_run_in_thread.py  test_sdl_event.py  test_timer.py
tests/_thread/: test_run_in_executor.py  test_run_in_thread.py
